--- a/MediMove/MediMove/Client/Shared/NavMenu.razor
+++ b/MediMove/MediMove/Client/Shared/NavMenu.razor
@@ -54,6 +54,11 @@
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Get Employees Report
                 </NavLink>
             </div>
+             <div class="nav-item px-3">
+                <NavLink class="nav-link" href="admin/patientsreport">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Get Patients Report
+                </NavLink>
+            </div>
         </AuthorizeView>
     </nav>
 </div>
