--- a/MediMove/MediMove/Client/Pages/Paramedic/ParamedicMain.razor
+++ b/MediMove/MediMove/Client/Pages/Paramedic/ParamedicMain.razor
@@ -3,7 +3,7 @@
 @using MediMove.Shared.Models.DTOs;
 @inject TransportService _transportService
 
-<div class="rz-p-12 rz-text-align-center">
+<div class="container-fluid">
     <RadzenDatePicker @bind-Value=@value Inline="true" Change="Change" />
 </div>
 
