--- a/MediMove/MediMove/Client/Shared/AuthLayout.razor
+++ b/MediMove/MediMove/Client/Shared/AuthLayout.razor
@@ -1,6 +1,13 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="middle-box">
+<div class="middle-box custom">
     <h2>Welcome to MediMoveApp</h2>
     @Body
 </div>
+
+<style>
+    .custom {
+        max-width: 350px;
+    }
+     
+</style>
